# zephyr-example-docker

./: .astylerc  .gitignore  CMakeLists.txt  prj.conf
.devcontainer/: Dockerfile  devcontainer.json
boards/: nucleo_l476rg.overlay
cmake/: GenerateVersionFromGit.cmake
src/: CMakeLists.txt  main.c  version.h.in
